[project]
name = "comfyui-kjnodes"
description = "Various quality of life -nodes for ComfyUI, mostly just visual stuff to improve usability."
version = "1.0.5"
license = {file = "LICENSE"}
dependencies = ["librosa", "numpy", "pillow>=10.3.0", "scipy", "color-matcher", "matplotlib", "huggingface_hub"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-KJNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kijai"
DisplayName = "ComfyUI-KJNodes"
Icon = ""

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [ 
    "ComfyUI_KJNodes_nodes", 
    "ComfyUI_KJNodes_nodes.intrinsic_loras",
    "ComfyUI_KJNodes_nodes.nodes",
    "ComfyUI_KJNodes_nodes.utility",
]

[tool.setuptools.package-dir]
"ComfyUI_KJNodes_nodes" = "."
"ComfyUI_KJNodes_nodes.intrinsic_loras" = "intrinsic_loras"
"ComfyUI_KJNodes_nodes.nodes" = "nodes"
"ComfyUI_KJNodes_nodes.utility" = "utility"

[tool.setuptools.package-data]
"*" = ["**/*.js", "**/*.json", "**/*.ttf", "**/*.otf", "**/*.png"]

[project.entry-points."comfyui.custom_nodes"]
ComfyUI_pythongosssss_nodes = "ComfyUI_pythongosssss_nodes"